# Logistics-Package-Separation-Software

./: CMakeLists.txt  README.md
DatasetUtils/: coco2labelme.py  test.py
py/: ParallelProcess.py  main.py  mainwindow.py  mainwindowui.py  messagebox.py
py/PaddleInference/: PackDetect.py  PaddleInf.py
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/PackDetect/: CMakeLists.txt  PackDetection.cpp  PackSegment.cpp
src/PackDetect/include/: PackDetection.h
src/PaddleInf/: CMakeLists.txt  PaddleInf.cpp  model.pdmodel  test.cpp
src/PaddleInf/include/: PaddleInf.h
src/ParallelProcess/: CMakeLists.txt  ParallelProcess.cpp
src/ParallelProcess/include/: ParallelProcess.h
src/Parameter/: CMakeLists.txt  Parameter.cpp
src/Parameter/include/: Parameter.h
src/TYConfigure/: CMakeLists.txt  TYConfigure.cpp
src/TYConfigure/include/: BayerISP.hpp  TYConfigure.h  Utils.hpp  common.hpp
src/Tracker/: CMakeLists.txt  KFPredict.cpp
src/Tracker/include/: KFPredict.h  Tracker.h
